[gd_scene load_steps=8 format=3 uid="uid://dkgpv5vlu04j8"]

[ext_resource type="Script" uid="uid://ew66gevvppnk" path="res://gui/text_entry_menu.gd" id="1_avsrc"]
[ext_resource type="Theme" uid="uid://dehvu01nlqvsf" path="res://textures/gui/themes/info_box_theme.tres" id="1_jagua"]
[ext_resource type="Theme" uid="uid://cxq4wi2s4byf1" path="res://textures/gui/themes/custom_theme_alt.tres" id="3_b25k8"]
[ext_resource type="PackedScene" uid="uid://dleye7m8gjxs0" path="res://gui/components/control_display_button.tscn" id="4_e51xj"]

[sub_resource type="InputEventKey" id="InputEventKey_urlxi"]
device = -1
physical_keycode = 4194305

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_uh0os"]
device = -1
button_index = 1
pressed = true

[sub_resource type="Shortcut" id="Shortcut_e51xj"]
events = [SubResource("InputEventKey_urlxi"), SubResource("InputEventJoypadButton_uh0os")]

[node name="TextEntryMenu" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -49.5
offset_right = 112.0
offset_bottom = 49.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jagua")
script = ExtResource("1_avsrc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Enter Text"
horizontal_alignment = 1

[node name="TextInput" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 44)
layout_mode = 2
size_flags_vertical = 10
theme = ExtResource("3_b25k8")
theme_override_font_sizes/font_size = 24
placeholder_text = "Enter text here..."
max_length = 20
expand_to_text_length = true
emoji_menu_enabled = false

[node name="CancelButton" parent="VBoxContainer" instance=ExtResource("4_e51xj")]
layout_mode = 2
size_flags_horizontal = 4
shortcut = SubResource("Shortcut_e51xj")
text = "Cancel"
input_action_name = "menu_back"

[connection signal="text_changed" from="VBoxContainer/TextInput" to="." method="_on_text_input_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/TextInput" to="." method="_on_text_input_text_submitted"]
[connection signal="pressed" from="VBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
